[metadata]
name = teslajson
version = 0.0.1
author = Greg Glockner
author_email = greg.glockner@gmail.com
description = Simple Python class to access the Tesla JSON API
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/gglockner/teslajson
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
install_requires =
  requests_oauthlib
